# twin

./: .env.example  .gitignore
backend/: me.txt  pyproject.toml
backend/data/: facts.json  style.txt  summary.txt
frontend/: package-lock.json  package.json
scripts/: deploy.ps1  deploy.sh
week2/: day2.md  day3.md  day5.md
